chore(wip): ELK Log aggregation